--- a/plugin.xml
+++ b/plugin.xml
@@ -15,8 +15,8 @@ See a full copy of license in the root folder of the project
     <author>Joel De La Torriente - jjdltc@gmail.com - https://github.com/jjdltc</author>
     <license>MIT</license>    
     <keywords>cordova,zip,compress,decompress,unzip</keywords>
-    <repo>https://github.com/jjdltc/jjdltc-cordova-plugin-zip.git</repo>
-    <issue>https://github.com/jjdltc/jjdltc-cordova-plugin-zip/issues</issue>
+    <repo>https://github.com/Sunbird-Ed/jjdltc-cordova-plugin-zip.git</repo>
+    <issue>https://github.com/Sunbird-Ed/jjdltc-cordova-plugin-zip/issues</issue>
 
     <js-module src="www/JJzip.js" name="JJzip">
         <clobbers target="JJzip" />
@@ -36,17 +36,13 @@ See a full copy of license in the root folder of the project
          <source-file src="src/android/Decompress.java" target-dir="src/com/jjdltc/cordova/plugin/zip" />
         <source-file src="src/android/FileUtil.java" target-dir="src/com/jjdltc/cordova/plugin/zip" />
     </platform>
-
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
             <feature name="JJzip">
                 <param name="ios-package" value="JJzip" />
             </feature>
         </config-file>
-
-        <source-file src="src/ios/JJzip.h" />
-        <source-file src="src/ios/JJzip.m" />
-
+        <source-file src="src/ios/JJzipPlugin.swift" />
         <framework src="libz.tbd" />
         <framework src="SSZipArchive" type="podspec" spec="~> 2.1.4" />
     </platform>
